refactor: remove specta

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -30,6 +30,7 @@
   --color-chart-3: var(--chart-3);
   --color-chart-4: var(--chart-4);
   --color-chart-5: var(--chart-5);
+
   --color-sidebar: var(--sidebar);
   --color-sidebar-foreground: var(--sidebar-foreground);
   --color-sidebar-primary: var(--sidebar-primary);
@@ -48,4 +49,37 @@
 button {
   cursor: pointer;
   user-select: none;
+}
+
+label:where(
+  :has(input[type='number']),
+  :has(input[type='text']),
+  :has(input[type='url']),
+  :has(select),
+  :has(textarea)
+) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 0.5rem;
+  width: 100%;
+  font-weight: 400;
+
+  & > span {
+    width: 100%;
+  }
+}
+
+label:where(:has(button[role='switch']), :has(input[type='checkbox']), :has(input[type='radio'])) {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.5rem;
+  font-weight: 400;
+
+  & > span {
+    width: 100%;
+  }
 }
