--- a/src/assets/style/base.css
+++ b/src/assets/style/base.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @source "../../node_modules/@tb-dev/vue-components";
 
@@ -46,40 +46,9 @@
   --radius-xl: calc(var(--radius) + 4px);
 }
 
-button {
-  cursor: pointer;
-  user-select: none;
-}
-
-label:where(
-  :has(input[type='number']),
-  :has(input[type='text']),
-  :has(input[type='url']),
-  :has(select),
-  :has(textarea)
-) {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 0.5rem;
-  width: 100%;
-  font-weight: 400;
-
-  & > span {
-    width: 100%;
-  }
-}
-
-label:where(:has(button[role='switch']), :has(input[type='checkbox']), :has(input[type='radio'])) {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 0.5rem;
-  font-weight: 400;
-
-  & > span {
-    width: 100%;
-  }
+@utility ellipsis {
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
